--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.3.3
 flask-cors==4.0.0
 tensorflow==2.13.0
-opencv-python==4.8.0.76
+keras==2.13.1
+opencv-python-headless==4.8.0.76
 numpy==1.24.2
 requests==2.31.0
 Pillow==9.5.0
