--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["python311", "pip", "ffmpeg"]
+nixPkgs = ["python311", "ffmpeg"]
 
 [phases.install]
-cmds = ["pip install --upgrade pip", "pip install -r requirements.txt"]
+cmds = ["python3.11 -m pip install --upgrade pip", "python3.11 -m pip install -r requirements.txt"]
 
 [phases.start]
 cmd = "gunicorn app:app"
