--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,11 @@
 nixPkgs = ["python311", "ffmpeg"]
 
 [phases.install]
-cmds = ["python3.11 -m pip install --upgrade pip", "python3.11 -m pip install -r requirements.txt"]
+cmds = [
+  "python3.11 -m ensurepip",
+  "python3.11 -m pip install --upgrade pip",
+  "python3.11 -m pip install -r requirements.txt"
+]
 
 [phases.start]
 cmd = "gunicorn app:app"
