--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,6 +3,7 @@ nixPkgs = ["python311", "ffmpeg"]
 
 [phases.install]
 cmds = [
+  "python3.11 -m ensurepip",
   "python3.11 -m pip install --upgrade pip",
   "python3.11 -m pip install -r requirements.txt"
 ]
