--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,8 +3,10 @@ nixPkgs = ["python311", "ffmpeg", "libGL", "libjpeg", "zlib", "pkg-config", "cma
 
 [phases.install]
 cmds = [
-  "python3.11 -m pip install -r requirements.txt"
+  "python3.11 -m venv /opt/venv",
+  "/opt/venv/bin/pip install --upgrade pip",
+  "/opt/venv/bin/pip install -r requirements.txt"
 ]
 
 [phases.start]
-cmd = "gunicorn app:app"
+cmd = "/opt/venv/bin/gunicorn app:app"
