--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["python311", "ffmpeg", "libGL", "libjpeg", "zlib", "pkg-config", "cmake"]
+nixPkgs = ["python311", "ffmpeg", "libGL", "libjpeg", "zlib", "pkg-config", "cmake", "blas", "lapack"]
 
 [phases.install]
 cmds = [
